# fsleut

./: README.md  package.json
src/: App.svelte  app.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sleuengine.rs
src/lib/: ClearButton.svelte  FileDialog.svelte  Inputline.svelte  ResultList.svelte  Select.svelte
