[package]
name = "fsleut"
version = "0.0.1"
description = "File Finder"
authors = ["kiw.a.gucci"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "dialog-open", "shell-open"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
globmatch = "0.2.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
