[package]
name = "fsleut"
version = "0.0.1"
description = "File Finder"
authors = ["kiw.a.gucci"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "path-all", "dialog-open", "shell-open"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
globmatch = "0.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
